--- a/packages/combo-suite/package.json
+++ b/packages/combo-suite/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@zbtsu/combo-suite",
   "version": "1.0.0",
+  "private": true,
   "description": "The full combo suite from ZaibatsuHub!",
   "author": "alekangelov",
   "license": "MIT",
@@ -12,7 +13,7 @@
     "node": ">=10"
   },
   "scripts": {
-    "build": "microbundle-crl --no-compress --format modern,cjs",
+    "build": "microbundle-crl --format modern,cjs",
     "start": "microbundle-crl watch --no-compress --format modern,cjs",
     "prepare": "run-s build",
     "test": "run-s test:unit test:lint test:build",
