--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -102,6 +102,7 @@
     "@types/styled-components": "^5.1.11",
     "@types/testing-library__dom": "^7.5.0",
     "craco-esbuild": "^0.3.3",
+    "csp-html-webpack-plugin": "^5.1.0",
     "electron": "^13.1.7",
     "electron-builder": "^22.11.7",
     "electron-devtools-installer": "^3.2.0",
