--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -5,6 +5,7 @@
   "main": "./build/electron/main.js",
   "homepage": ".",
   "dependencies": {
+    "@react-spring/web": "^9.2.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,6 +13,7 @@
     "electron-store": "^8.0.0",
     "electron-updater": "^4.3.9",
     "react": "^17.0.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
@@ -98,6 +100,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^16.4.3",
     "@types/react": "^17.0.0",
+    "@types/react-custom-scrollbars": "^4.0.8",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.11",
     "@types/testing-library__dom": "^7.5.0",
@@ -109,6 +112,7 @@
     "env-cmd": "^10.1.0",
     "foreman": "^3.0.1",
     "nodemon": "^2.0.12",
+    "prettier": "^2.3.2",
     "react-scripts": "4.0.3",
     "sass": "^1.36.0",
     "ts-node": "^10.1.0",
