--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -5,16 +5,25 @@
   "main": "./build/electron/main.js",
   "homepage": ".",
   "dependencies": {
+    "@react-firebase/auth": "^0.2.10",
+    "@react-firebase/firestore": "^0.5.5",
     "@react-spring/web": "^9.2.4",
+    "@reduxjs/toolkit": "^1.6.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "electron-log": "^4.4.0",
     "electron-store": "^8.0.0",
     "electron-updater": "^4.3.9",
+    "firebase": "^8.8.0",
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-firebaseui": "^5.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0",
+    "styled-breakpoints": "^10.0.1",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
@@ -102,6 +111,7 @@
     "@types/react": "^17.0.0",
     "@types/react-custom-scrollbars": "^4.0.8",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.11",
     "@types/testing-library__dom": "^7.5.0",
     "craco-esbuild": "^0.3.3",
