--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -5,6 +5,7 @@
   "main": "./build/electron/main.js",
   "homepage": ".",
   "dependencies": {
+    "@hookform/resolvers": "^2.6.1",
     "@react-firebase/firestore": "^0.5.5",
     "@react-spring/web": "^9.2.4",
     "@reduxjs/toolkit": "^1.6.1",
@@ -16,18 +17,23 @@
     "electron-store": "^8.0.0",
     "electron-updater": "^4.3.9",
     "firebase": "^8.8.0",
-    "react": "^17.0.2",
+    "react": "^17",
     "react-custom-scrollbars": "^4.2.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^17",
     "react-firebaseui": "^5.0.2",
+    "react-hook-form": "^7.12.1",
     "react-redux": "^7.2.4",
     "react-redux-firebase": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
     "redux-firestore": "^0.15.0",
+    "redux-persist": "^6.0.0",
+    "rooks": "^5.4.2",
     "styled-breakpoints": "^10.0.1",
     "styled-components": "^5.3.0",
-    "web-vitals": "^1.0.1"
+    "tinycolor2": "^1.4.2",
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "build": "craco build",
@@ -116,7 +122,9 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.11",
     "@types/testing-library__dom": "^7.5.0",
+    "@types/tinycolor2": "^1.4.3",
     "craco-esbuild": "^0.3.3",
+    "cross-env": "^7.0.3",
     "csp-html-webpack-plugin": "^5.1.0",
     "electron": "^13.1.7",
     "electron-builder": "^22.11.7",
