making a shit ton of stuff work + social login and firebase setup

--- a/packages/client/electron/tsconfig.json
+++ b/packages/client/electron/tsconfig.json
@@ -4,7 +4,8 @@
     "noImplicitAny": true,
     "sourceMap": true,
     "outDir": "../build/electron",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "target": "ESNext"
   },
   "include": [".", "../src/types"],
   "exclude": ["node_modules"]
