--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,10 +26,12 @@
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
+    "react-select": "^4.3.1",
     "react-spinners": "^0.11.0",
     "reactfire": "^3.0.0-rc.3",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
+    "remeda": "^0.0.30",
     "rooks": "^5.4.2",
     "styled-breakpoints": "^10.0.1",
     "styled-components": "^5.3.0",
@@ -122,6 +124,7 @@
     "@types/react-custom-scrollbars": "^4.0.8",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-select": "^4.0.17",
     "@types/styled-components": "^5.1.11",
     "@types/testing-library__dom": "^7.5.0",
     "@types/tinycolor2": "^1.4.3",
