--- a/packages/combo-suite/package.json
+++ b/packages/combo-suite/package.json
@@ -24,7 +24,7 @@
     "predeploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build",
     "combovars": "node ./src/makeComboVars.js",
-    "icons": "rimraf ./src/components/icons && yarn svgr ./src/images/icons --ext tsx --out-dir ./src/components/icons --index-template ./svgr-index.js --template ./svgr-template.js --filename-case kebab"
+    "icons": "rimraf ./src/components/icons && yarn svgr ./src/images/icons --ext tsx --out-dir ./src/components/icons --index-template ./svgr-index.js --template ./svgr-template.js --filename-case kebab --icon"
   },
   "peerDependencies": {
     "react": "^17"
